# Ming-stack-learning-platform

./: .env.eksempel  .gitignore  CMakeLists.txt  GrafanaTask3Catch.html  MC-TF.html  MQTTTask5Card.html  MQTT_T3_min_versjon.css  README.md  Visualizer.html  docker-compose.yml  package-lock.json  sdkconfig.defaults
docs/: README (3).md
main/: CMakeLists.txt  Kconfig.projbuild  distance.cpp  distance.h  idf_component.yml  led_control.c  led_control.h  potmeter.cpp  potmeter.h  resetful_server.c  sensorer.c  sensorer.h  tusb_cdc_handler.c  tusb_ncm_demo.h  tusb_ncm_main.c
oblig 1 ai/: senosor task.js
real-code/: index.html
real-code/css/: base.css  grafana-t3.css  grafana-t4.css  influx-t2.css  layout.css  mc-quiz.css  nodered.css  sensors.css
real-code/js/: GrafanaT-4.js  InfluxDBT-2.js  grafana-t3.js  i18n.js  mc-grafana.js  mc-mqtt.js  nodered.js  router.js  sensors.js  task3.js
workrepo/: Drag_and_drop.html  GrafanaTask3Catch NEW.html  MC.html  MC_Grafana.html  MC_Influx.html  MC_MQTT.html  MC_NodeRed.html  MQTTTask5Card.html  TF.html  TF_Grafana.html  TF_Influx.html  TF_MQTT.html  TF_NodeRED.html  Visualizer.html
